@@ -1,3 +1,11 @@
+Fri Jun 21 18:56:58 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (bigsub_int): Use bdigit_roomof.
+	  (bigadd_int): Ditto.
+	  (bigand_int): Ditto.
+	  (bigor_int): Ditto.
+	  (bigxor_int): Ditto.
+
 Fri Jun 21 17:56:25 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/gc/gcbench.rb: fix summary of benchmark result notaton.
